resolved overflow conflicts

--- a/client/src/stylemodules/Homepage.module.css
+++ b/client/src/stylemodules/Homepage.module.css
@@ -1,7 +1,6 @@
 * {
   box-sizing: border-box;
   font-family: Lato, sans-serif !important;
-  overflow: hidden;
 }
 .navbar-parent {
   width: 100%;
